--- a/src/components/buttons.css
+++ b/src/components/buttons.css
@@ -1,14 +1,14 @@
 /* components/buttons.css */
 .btn {
-  @apply font-medium rounded-lg text-sm px-5 py-2.5 focus:outline-none focus:ring-4;
+  @apply font-medium rounded uppercase  text-sm px-5 py-2.5 focus:outline-none focus:ring-4;
 }
 
 .btn-exsmall {
-  @apply px-3 py-2 text-xs;
+  @apply px-2.5 py-1 text-xs;
 }
 
 .btn-small {
-  @apply px-3 py-2 text-sm;
+  @apply px-3 py-1.5 text-sm;
 }
 
 .btn-large {
