--- a/src/input.css
+++ b/src/input.css
@@ -9,6 +9,7 @@
 @import "./components/buttons.css";
 @import "./components/card.css";
 @import "./components/forget.css";
+@import "./components/modal.css";
 
 .section {
   @apply container xl:max-w-full xl:px-10 mx-auto;
