--- a/src/components/buttons.css
+++ b/src/components/buttons.css
@@ -52,3 +52,7 @@
 .btn-purple {
   @apply text-white bg-purple-700 focus:ring-purple-300 hover:bg-purple-800;
 }
+
+.btn-disable {
+  @apply text-gray-50 bg-gray-400 cursor-none;
+}
