--- a/src/components/buttons.css
+++ b/src/components/buttons.css
@@ -1,6 +1,6 @@
 /* components/buttons.css */
 .btn {
-  @apply font-medium rounded uppercase  text-sm px-5 py-2.5 focus:outline-none focus:ring-4;
+  @apply font-medium rounded uppercase text-sm px-5 py-2.5 focus:outline-none focus:ring-4 text-center h-fit;
 }
 
 .btn-exsmall {
